[gd_scene format=3 uid="uid://dniyrkkdwf3cb"]

[ext_resource type="Texture2D" uid="uid://mutuvrmwka7a" path="res://Example World/ExtraFromEavheng/cea9746f-90a6-4574-8e54-b5da1f088e2c.jpg" id="2_bc588"]
[ext_resource type="Texture2D" uid="uid://dqgno6bpaq7h6" path="res://Example World/ExtraFromEavheng/fires.png" id="4_2w12e"]
[ext_resource type="Texture2D" uid="uid://pei31bx87dwx" path="res://Example World/ExtraFromEavheng/grass.jpg" id="4_q8tgt"]
[ext_resource type="Script" uid="uid://dpy2y04nd1q1k" path="res://Example World/Level/Level_1/Enemy.gd" id="5_bk4di"]
[ext_resource type="AudioStream" uid="uid://dkxrc185ujsd1" path="res://Example World/ExtraFromEavheng/ChillStart.mp3" id="5_yy5lb"]
[ext_resource type="AudioStream" uid="uid://bbhtrpopa4dag" path="res://Example World/ExtraFromEavheng/Boss effect.mp3" id="6_2w12e"]
[ext_resource type="Environment" uid="uid://bqp54syxqnqww" path="res://Player_Controller/world_environment.tres" id="7_tfq4t"]
[ext_resource type="PackedScene" uid="uid://oc13h3au02ro" path="res://Player_Controller/player_character.tscn" id="10_nucft"]

[sub_resource type="SphereMesh" id="SphereMesh_4r2lv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bo61t"]
albedo_texture = ExtResource("2_bc588")

[sub_resource type="SphereShape3D" id="SphereShape3D_bk4di"]
radius = 1.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_82y80"]
albedo_texture = ExtResource("4_q8tgt")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_etv36"]
material = SubResource("StandardMaterial3D_82y80")
size = Vector2(18, 200)
subdivide_depth = 2

[sub_resource type="BoxShape3D" id="BoxShape3D_etv36"]
size = Vector3(18, 0.1, 200.264)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uptxv"]
albedo_texture = ExtResource("4_2w12e")

[sub_resource type="SphereMesh" id="SphereMesh_2w12e"]
radius = 4.0
height = 8.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_q8tgt"]
albedo_texture = ExtResource("2_bc588")

[sub_resource type="SphereShape3D" id="SphereShape3D_82y80"]
radius = 6.716

[node name="World" type="Node3D" unique_id=1420399800 groups=["World"]]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=501405409]
environment = ExtResource("7_tfq4t")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1228246284]
transform = Transform3D(-0.8435731, -0.44660202, -0.2982133, -0.28327402, -0.10170801, 0.9536306, -0.45622405, 0.8889332, -0.040712614, -4.3793087, 6.659208, 6.130226)
layers = 524289
light_color = Color(1, 1, 0.780392, 1)
shadow_enabled = true

[node name="Enemy" type="Node3D" parent="." unique_id=1426381745]
transform = Transform3D(-1.7484555e-07, 0, 4, 0, 4, 0, -4, 0, -1.7484555e-07, 58.925888, -9.919525, -514.04517)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Enemy" unique_id=1291693317]
transform = Transform3D(-0.01036708, 0, -0.9999463, 0, 1, 0, 0.9999463, 0, -0.01036708, -176.45059, 3.1994789, -14.705748)
mesh = SubResource("SphereMesh_4r2lv")
surface_material_override/0 = SubResource("StandardMaterial3D_bo61t")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy" unique_id=531850849]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4705776, 0)
shape = SubResource("SphereShape3D_bk4di")

[node name="Player_Character" parent="." unique_id=2125754370 instance=ExtResource("10_nucft")]
transform = Transform3D(-0.9975065, 0, -0.07057485, 0, 1, 0, 0.07057485, 0, -0.9975065, 0.48244286, 0.26812816, -2.367126)

[node name="LevelGeometry" type="CSGCombiner3D" parent="." unique_id=628426511]
use_collision = true

[node name="Floor" type="StaticBody3D" parent="LevelGeometry" unique_id=747797169]

[node name="MeshInstance3D" type="MeshInstance3D" parent="LevelGeometry/Floor" unique_id=2079280830]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 96.50089)
mesh = SubResource("PlaneMesh_etv36")

[node name="CollisionShape3D" type="CollisionShape3D" parent="LevelGeometry/Floor" unique_id=968079139]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 96.643745)
shape = SubResource("BoxShape3D_etv36")

[node name="Wall1" type="StaticBody3D" parent="LevelGeometry" unique_id=251821669]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall1" unique_id=2099088775]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.57249737, 4.705902, 14.260482)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall2" type="StaticBody3D" parent="LevelGeometry" unique_id=1372103857]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 8.432344)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall2" unique_id=217185215]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.996831, 3.7507648, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall3" type="StaticBody3D" parent="LevelGeometry" unique_id=1952236339]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall3" unique_id=730627936]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall4" type="StaticBody3D" parent="LevelGeometry" unique_id=513474284]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.031784, 0, 16.179125)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall4" unique_id=1396055297]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall5" type="StaticBody3D" parent="LevelGeometry" unique_id=1906034117]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5110359, 0, 21.372505)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall5" unique_id=1673247199]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall6" type="StaticBody3D" parent="LevelGeometry" unique_id=1127184942]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.480551, 0, 24.765371)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall6" unique_id=1059963543]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall7" type="StaticBody3D" parent="LevelGeometry" unique_id=1374763798]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.649375, 0, 28.880928)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall7" unique_id=851711471]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall8" type="StaticBody3D" parent="LevelGeometry" unique_id=283501618]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2055569, 0, 33.987194)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall8" unique_id=103404869]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall9" type="StaticBody3D" parent="LevelGeometry" unique_id=965827443]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5334511, 0, 37.423775)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall9" unique_id=1900157342]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall10" type="StaticBody3D" parent="LevelGeometry" unique_id=1940359730]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.6454353, 0, 43.890133)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall10" unique_id=1075191998]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall11" type="StaticBody3D" parent="LevelGeometry" unique_id=2026233951]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 48.412724)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall11" unique_id=137999350]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall12" type="StaticBody3D" parent="LevelGeometry" unique_id=890012173]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.792631, 0, 55.26759)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall12" unique_id=516241974]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall13" type="StaticBody3D" parent="LevelGeometry" unique_id=1586590416]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 62.457344)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall13" unique_id=1693926708]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall14" type="StaticBody3D" parent="LevelGeometry" unique_id=960423153]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.0461092, 0, 69.34836)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall14" unique_id=1873528845]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall15" type="StaticBody3D" parent="LevelGeometry" unique_id=1067075222]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 74.6456)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall15" unique_id=1573720358]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall16" type="StaticBody3D" parent="LevelGeometry" unique_id=2065503281]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.59241, 0, 77.224884)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall16" unique_id=285838794]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall17" type="StaticBody3D" parent="LevelGeometry" unique_id=800562689]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 81.267395)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall17" unique_id=936583286]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall18" type="StaticBody3D" parent="LevelGeometry" unique_id=1568791427]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3036175, 0, 89.336685)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall18" unique_id=147281529]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall19" type="StaticBody3D" parent="LevelGeometry" unique_id=1370792907]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 93.97777)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall19" unique_id=352696801]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1653996, 4.705902, 3.401822)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall20" type="StaticBody3D" parent="LevelGeometry" unique_id=1900323467]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 99.433426)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall20" unique_id=1722138837]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall21" type="StaticBody3D" parent="LevelGeometry" unique_id=530251304]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.294422, 0, 103.9616)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall21" unique_id=1076789695]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall22" type="StaticBody3D" parent="LevelGeometry" unique_id=895601754]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.9701939, 0, 111.25895)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall22" unique_id=1334296032]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall23" type="StaticBody3D" parent="LevelGeometry" unique_id=1966036784]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2226067, 0, 118.26584)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall23" unique_id=1334116012]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall24" type="StaticBody3D" parent="LevelGeometry" unique_id=1889971896]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.4704285, 0, 127.266495)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall24" unique_id=1253410601]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall25" type="StaticBody3D" parent="LevelGeometry" unique_id=312585220]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.8730011, 0, 133.34457)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall25" unique_id=1156224678]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8858204, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall26" type="StaticBody3D" parent="LevelGeometry" unique_id=498462235]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.7197247, 0, 140.35712)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall26" unique_id=1262769045]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall27" type="StaticBody3D" parent="LevelGeometry" unique_id=1901711244]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.048029, 0, 147.94836)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall27" unique_id=2003770428]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall28" type="StaticBody3D" parent="LevelGeometry" unique_id=968438277]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.1264248, 0, 159.06076)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall28" unique_id=898516270]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall29" type="StaticBody3D" parent="LevelGeometry" unique_id=2114416794]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5326443, 0, 171.5382)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall29" unique_id=1446001205]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="Wall30" type="StaticBody3D" parent="LevelGeometry" unique_id=237593028]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.923149, 0, 177.83905)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="LevelGeometry/Wall30" unique_id=1045325526]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.42028427, 4.705902, 3.401825)
use_collision = true
height = 10.0
material = SubResource("StandardMaterial3D_uptxv")

[node name="physics_objects" type="Node3D" parent="." unique_id=1910628291]

[node name="BossMusic" type="AudioStreamPlayer" parent="." unique_id=578580319]
volume_db = -10.0

[node name="Bot" type="CharacterBody3D" parent="." unique_id=1854767119]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.482, 0.268, 7.955686)
script = ExtResource("5_bk4di")
intro_sound = ExtResource("5_yy5lb")
loop_sound = ExtResource("6_2w12e")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Bot" unique_id=651923364]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.3564782, 2.6585412)
mesh = SubResource("SphereMesh_2w12e")
surface_material_override/0 = SubResource("StandardMaterial3D_q8tgt")

[node name="Label3D" type="Label3D" parent="Bot" unique_id=1853526766]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.001172185, 0.97702885, -1.5453453)
offset = Vector2(0, 1)
billboard = 1
text = "Catch me if u can"
font_size = 72

[node name="Area3D" type="Area3D" parent="Bot" unique_id=413675065]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.8187666, 0.88766336)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bot/Area3D" unique_id=1900309177]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.31267834, 1.460474)
shape = SubResource("SphereShape3D_82y80")

[connection signal="body_entered" from="Bot/Area3D" to="Bot" method="_on_area_3d_body_entered"]
